<resources>
    <string name="app_name">Suitmedia</string>
    <string name="first_photo">first_photo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="user_picture">User Picture</string>
    <string name="firstname_lastname">Firstname Lastname</string>
    <string name="email">EMAIL@EMAIL.COM</string>
    <string name="ispalindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="fullname">%1s %2s</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Retry</string>
    <string name="back">Back</string>
    <string name="screen_title">Screen Title</string>
    <string name="third_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="please_fill_in_your_name">Please fill in your name</string>
    <string name="the_palindrome_field_is_still_empty">The palindrome field is still empty</string>
</resources>