<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/white"
    android:padding="4dp"
    app:cardElevation="10dp"
    app:strokeWidth="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="49dp"
            android:layout_height="49dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/user_picture"
            android:src="@drawable/ic_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="251dp"
            android:layout_height="24dp"
            android:layout_marginStart="18dp"
            android:text="@string/firstname_lastname"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_user"
            app:layout_constraintTop_toTopOf="@+id/iv_user" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="251dp"
            android:layout_height="24dp"
            android:text="@string/email"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>